<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/id_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nombre_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/nombre_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/apellidos_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/apellidos_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/direccion_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/direccion_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/telefono_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/telefono_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mail_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/mail_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fecha_nacimiento_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fecha_nacimiento_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/estado_civil_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/edo_civil_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/usuario_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/usuario_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contraseña_requested_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/contraseña_text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>