<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout">

            <TextView
                android:id="@+id/header_final_enrollment_tv"
                style="@style/HeaderTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"
                android:text="@string/header_final_enrollment_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripcion_final_enrollment_tv"
                style="@style/DescriptionTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/descripcion_final_enrollment_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_final_enrollment_tv" />

            <TextView
                android:id="@+id/instrucciones_final_enrollment_tv"
                style="@style/DescriptionTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:textStyle="bold"
                android:text="@string/instrucciones_final_enrollment_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descripcion_final_enrollment_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/next_enrollment_terminacion_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:text="@string/explora_app_text"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:layout_margin="@dimen/fab_margin" />
    </FrameLayout>
</layout>