<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout">

            <TextView
                android:id="@+id/header_captura_codigo_autorizacion_tv"
                style="@style/HeaderTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_captura_codigo_autorizacion_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripcion_captura_codigo_autorizacion_tv"
                style="@style/DescriptionTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/descripcion_captura_codigo_autorizacion_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_captura_codigo_autorizacion_tv" />


            <TextView
                android:id="@+id/celular_recepcion_codigo_autorizacion_tv"
                style="@style/DescriptionTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/celular_recepcion_codigo_autorizacion_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descripcion_captura_codigo_autorizacion_tv" />

            <TextView
                android:id="@+id/pregunta_celular_recepcion_codigo_autorizacion_tv"
                style="@style/DescriptionTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/pregunta_celular_recepcion_codigo_autorizacion_text"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/celular_recepcion_codigo_autorizacion_tv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codigo_autorizacion_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/codigo_autorizacion_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pregunta_celular_recepcion_codigo_autorizacion_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codigo_autorizacion_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/enviar_nuevamente_codigo_autorizacion_tv"
                style="@style/DescriptionTextFromEnrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:text="@string/enviar_nuevamente_codigo_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/codigo_autorizacion_til" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_enrollment_perfil_fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_media_next" />

        <ProgressBar
            android:id="@+id/enrollment_codigo_autorizacion_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:background="@drawable/corners"
            android:padding="4dp" />

    </FrameLayout>
</layout>